--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@babel/preset-env": "^7.25.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "mysql2": "^3.11.3",
     "nodemon": "^3.1.4"
   }
 }
