--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "body-parser": "^1.20.3",
+    "connect-redis": "^7.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "mysql2": "^3.11.3",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "redis": "^4.7.0"
   }
 }
